Fix day snapping on timeline

--- a/views/data_timeline.tt
+++ b/views/data_timeline.tt
@@ -65,7 +65,7 @@
                 return new Date (
                     datetime.getFullYear(),
                     datetime.getMonth(),
-                    datetime.getDay()
+                    datetime.getDate()
                 );
             }
 
