Fix cursor on delete menu

--- a/views/record.tt
+++ b/views/record.tt
@@ -39,7 +39,7 @@
                     <li role="presentation"><a role="menuitem" href="/link/[% record.current_id %]">Link record</a></li>
                 [% END %]
                 [% IF user.permission.delete || user.permission.delete_noneed_approval %]
-                    <li role="presentation"><a role="menuitem" data-toggle="modal" data-target="#modaldelete">Delete</a></li>
+                    <li role="presentation"><a role="menuitem" href="" data-toggle="modal" data-target="#modaldelete">Delete</a></li>
                 [% END %]
             </ul>
         </li>
