--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -151,7 +151,7 @@
 
             [% FOR message IN messages %]
                 <div class="alert alert-[% message.bootstrap_color %]">
-                    [% message.toString | html_entity | html_line_break %]
+                    [% message.toString | html_entity %]
                 </div>
             [% END %]
 
