Update graph colours including aligning with rag

--- a/public/css/local.css
+++ b/public/css/local.css
@@ -56,23 +56,23 @@ div.circ-small {
 }
 
 .b_red {
-    background: #d9534f;
+    background: #D9534F;
 }
 
 .c_amber {
-    background: #f0ad4e;
+    background: #F0AD4E;
 }
 
 .d_green {
-    background: #5cb85c;
+    background: #5CB85C;
 }
 
 .a_grey {
-    background: gray;
+    background: #8C8C8C;
 }
 
 .e_purple {
-    background: purple;
+    background: #4B0F44;
 }
 
 .scrollable-menu {
