--- a/views/config.tt
+++ b/views/config.tt
@@ -41,8 +41,9 @@
                 selector: "textarea",
                 width : "800",
                 height : "400",
+                plugins : "table",
                 theme_advanced_buttons1 : "bold, italic, underline, strikethrough, justifyleft, justifycenter, justifyright, bullist, numlist, outdent, indent, undo, redo, link, unlink, cleanup, hr, formatselect, forecolor, backcolor",
-                theme_advanced_buttons2 : "",
+                theme_advanced_buttons2 : "tablecontrols",
                 theme_advanced_buttons3 : ""
             });
         [% END %]
