--- a/views/record.tt
+++ b/views/record.tt
@@ -16,12 +16,7 @@
     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Version history <b class="caret"></b></button>
     <ul id="menu1" class="dropdown-menu scrollable-menu" role="menu" aria-labelledby="drop4">
         [% FOREACH version IN versions %]
-        [% IF version.id == record.id %]
-        [% selected = "selected" %]
-        [% ELSE %]
-        [% selected = "" %]
-        [% END %]
-        <li role="presentation"><a role="menuitem" tabindex="-1" href="/history/[% version.id %]">[% version.created %]</a></li>
+        <li [% IF version.id == record.record_id %]class="active"[% END %] role="presentation"><a role="menuitem" tabindex="-1" href="/history/[% version.id %]">[% version.created %]</a></li>
         [% END %]
     </ul>
 </div>
