Make remember username option text clearer

--- a/views/login.tt
+++ b/views/login.tt
@@ -35,7 +35,7 @@
                             <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password">
                         </div>
                         <span class="button-checkbox">
-                            <button type="button" class="btn" data-color="info">Remember Me</button>
+                            <button type="button" class="btn" data-color="info">Remember Username</button>
                             <input type="checkbox" name="remember_me" id="remember" [% IF username %]checked="checked"[% END %] class="hidden">
                             <a href="" class="btn btn-link pull-right" data-toggle="modal" data-target="#myModal">Reset Password</a>
                         </span>
