--- a/views/edit.tt
+++ b/views/edit.tt
@@ -163,10 +163,12 @@
             [% ELSE %]
                 [% enumvals = dispcol.enumvals %]
             [% END %]
+            [% is_selected = 0 %]
             [% FOREACH enumval IN enumvals %]
-                [% UNLESS enumval.deleted %]
-                    <option value="[% enumval.id %]" [% IF editvalue.id == enumval.id %]selected[% END %]>[% enumval.value | html_entity %]</option>
-                [% END %]
+                <option value="[% enumval.id %]" [% IF editvalue.id == enumval.id %][% is_selected = 1 %]selected[% END %]>[% enumval.value | html_entity %]</option>
+            [% END %]
+            [% IF editvalue.id AND NOT is_selected %]
+                <option value="[% editvalue.id %]" selected>[% editvalue.html %]</option>
             [% END %]
         </select>
     [% ELSIF dispcol.type == "curval" %]
@@ -207,10 +209,14 @@
             [% ELSIF NOT record.current_id %] [%# default to current user for new records only %]
                 [% selected = user.id %]
             [% END %]
+            [% is_selected = 0 %]
             [% FOREACH person IN dispcol.people %]
                 [% UNLESS person.deleted %]
-                    <option value="[% person.id %]" [% IF selected == person.id %]selected[% END %]>[% person.value | html_entity %]</option>
+                    <option value="[% person.id %]" [% IF selected == person.id %][% is_selected = 1 %]selected[% END %]>[% person.value | html_entity %]</option>
                 [% END %]
+            [% END %]
+            [% IF editvalue.id AND NOT is_selected %]
+                <option value="[% editvalue.id %]" selected>[% editvalue.html %]</option>
             [% END %]
         </select>
     [% ELSIF dispcol.type == "file" %]
