--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -124,9 +124,10 @@
                             </ul>
                             <form class="navbar-form navbar-left" role="search" action="/search">
                                 <div class="form-group">
-                                    <input type="text" name="search" class="form-control" title="Use * as a wildcard character" placeholder="Use * as wildcard" value="[% search %]">
+                                    <input type="text" name="search_text" class="form-control" title="Use * as a wildcard character" placeholder="Use * as wildcard" value="[% search %]">
                                 </div>
-                                <button type="submit" class="btn btn-default">Search</button>
+                                <button type="submit" name="search" value="search" class="btn btn-default">Search</button>
+                                <button type="submit" name="clear" value="clear" class="btn btn-default">Clear</button>
                             </form>
                             <ul class="nav navbar-nav navbar-right">
                                 <li class="dropdown">
