--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -214,6 +214,8 @@
         [% END %]
         [% IF page == "view" %]
             <script type="text/javascript" src="[% url.js %]/query-builder.js"></script>
+        [% END %]
+        [% IF page == "view" || page == "edit" %]
             <script type="text/javascript" src="[% url.js %]/bootstrap3-typeahead.min.js"></script>
         [% END %]
         [% IF page == "data" AND viewtype == "calendar" %]
